--- a/README
+++ b/README
@@ -3,8 +3,8 @@
     named 'TwoBodyKeplerOrbit' and 'OrbitUtilities'. The 'TwoBodyKeplerOrbit' module
     is a representation of a classical keplerian orbit in the ECI coordinate frame. 
     It calculates, stores, and modifies all of the fundamental orbital elements such as 
-    semi-major axis, eccentricty, ext... The 'OrbitUtilities' module is a static class 
-    that contains many helper methods in building and getting information needed to construct
+    semi-major axis, eccentricty, ext... The 'OrbitUtilities' module is a static library 
+    that contains many helper methods for building and getting information needed to construct
     and orbit. The general idea is to make measurements and use the utilities module to build
     an initial position and velocity needed to construct a preliminary orbit.
 
